5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1635_2443.log
== TEST (2019-04-15 13:22:40) 
-- CODE:
raio = float(input("Raio do tanque: "))
x = float(input("Altura do ar: "))

opcao = int(input("Volume do ar (1) ou do liquido (2): "))
calota = p1/3 * x**2 * (3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	4/3 * pi * raio**3 - calota

print(round(volume, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    calota = p1/3 * x**2 * (3 * raio - x)
NameError: name 'p1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:23:03) 
-- CODE:
raio = float(input("Raio do tanque: "))
x = float(input("Altura do ar: "))

opcao = int(input("Volume do ar (1) ou do liquido (2): "))
calota = pi/3 * x**2 * (3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	4/3 * pi * raio**3 - calota

print(round(volume, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    calota = pi/3 * x**2 * (3 * raio - x)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:24:22) 
-- CODE:
raio = float(input("Raio do tanque: "))
x = float(input("Altura do ar: "))

opcao = int(input("Volume do ar (1) ou do liquido (2): "))
calota = pi/3 * x**2 * (3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	4/3 * pi * raio**3 - calota

print(round(volume, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    calota = pi/3 * x**2 * (3 * raio - x)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:24:59) 
-- CODE:
from math import*
raio = float(input("Raio do tanque: "))
x = float(input("Altura do ar: "))

opcao = int(input("Volume do ar (1) ou do liquido (2): "))
calota = pi/3 * x**2 * (3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	4/3 * pi * raio**3 - calota

print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:25:40) 
-- CODE:
from math import*
raio = float(input("Raio do tanque: "))
x = float(input("Altura do ar: "))

opcao = int(input("Volume do ar (1) ou do liquido (2): "))
calota = pi/3 * x**2 * (3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota

print(round(volume, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:25:41) 
-- CODE:
from math import*
raio = float(input("Raio do tanque: "))
x = float(input("Altura do ar: "))

opcao = int(input("Volume do ar (1) ou do liquido (2): "))
calota = pi/3 * x**2 * (3 * raio - x)

if (opcao == 1):
	volume = calota
else:
	volume = 4/3 * pi * raio**3 - calota

print(round(volume, 4))
-- EXECUTION TIME:
0.160017
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
